# kusto_langchain

./: .env.example  .gitignore  LICENSE  README.md  demo.py  pyproject.toml
langchain_kusto/: __init__.py  vectorstore.py
