[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-kusto"
version = "0.1.0"
description = "LangChain vector store implementation for Azure Data Explorer (Kusto)"
dependencies = [
    "langchain-core>=0.1.0",
    "azure-kusto-data>=4.2.0",
    "azure-identity>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
]
